# agent_test

./: .env.example  .gitignore  agent_test.txt  camera_agent.bat  findings.md  main.py  progress.md  pyproject.toml  requirements.txt  task_plan.md
agent/: __init__.py  core.py  memory.py  prompts.py
api/: __init__.py  server.py
config/: __init__.py  llm_config.py  minimax_embedding.py  settings.py
docs/: changelog.md  product_definition.md  technical_design.md
knowledge/: builder.py  converter.py  platforms.yaml
knowledge/common/platform_docs/: camera开发 v1.2 一.md  camera开发 v1.2 三.md  camera开发 v1.2 二.md  camera开发v1.2 四.md
knowledge/mtk/mt6985/platform_docs/: camera_arch.md  common_errors.md  dts_config_reference.md  mipi_timing_guide.md  sensor_bringup_guide.md
knowledge/mtk/mt6985/vectorstore/: chroma.sqlite3
knowledge/qualcomm/sm8550/platform_docs/: 80-P9301-97_REV_YF_Camera_Sensor_Driver_Bringup_Guide.md  80-P9301-97_REV_YF_Camera_Sensor_Driver_Bringup_Guide_bak.md  80-nv610-36sc_d_msm8952_audio_quick_start_guide.md  80-nv610-71_e_storage_quick_start.md
knowledge/qualcomm/sm8550/vectorstore/: chroma.sqlite3
models/: __init__.py  schemas.py
platform/: __init__.py  context.py  manager.py
tests/: test_dts_parser.py  test_log_analyzer.py  test_platform_manager.py
tools/: __init__.py  code_analyzer.py  dts_parser.py  knowledge_search.py  log_analyzer.py  timing_checker.py  web_searcher.py
utils/: completer.py
